--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -1,6 +1,5 @@
-.country-handler {
+.country {
   display: flex;
-  justify-content: flex-start;
   align-items: center;
   align-content: flex-start;
   flex-direction: column;
@@ -14,5 +13,6 @@
   display: flex;
   position: absolute;
   top: 5%;
-  left: 47.5%;
+  width: 10%;
+  border-radius: 5px;
 }
